add index.js and js conctent

--- a/src/index.html
+++ b/src/index.html
@@ -6,7 +6,26 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <title>Texas Taschenrechner</title>
   </head>
+  <style>
+    #test {
+      background: #000;
+    }
+  </style>
   <body>
-    1 +2=3
+    <input
+      type="text"
+      name="first"
+      placeholder="enter first number"
+      value="22"
+    />
+    <input
+      type="text"
+      name="second"
+      placeholder="enter second number"
+      value="117"
+      id="test"
+    />
+    <button class="submit">Submit</button>
+    <script src="./index.js"></script>
   </body>
 </html>
