forgot to save files

--- a/src/index.html
+++ b/src/index.html
@@ -6,11 +6,11 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <title>Texas Taschenrechner</title>
   </head>
-  <style>
+  <!-- <style>
     #test {
       background: #000;
     }
-  </style>
+  </style> -->
   <body>
     <input
       type="text"
