add operators and all calc options to cal

--- a/src/index.html
+++ b/src/index.html
@@ -18,6 +18,7 @@
       placeholder="enter first number"
       value="22"
     />
+    +
     <input
       type="text"
       name="second"
@@ -25,7 +26,11 @@
       value="117"
       id="test"
     />
-    <button class="submit">Submit</button>
+    <button class="sum">Add</button>
+    <button class="sub">Subtract</button>
+    <button class="multi">Multiply</button>
+    <button class="div">Divide</button>
+    <div id="result">0</div>
     <script src="./index.js"></script>
   </body>
 </html>
