--- a/src/index.html
+++ b/src/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+    <link rel="stylesheet" href="scss/style.scss" />
     <title>Texas Taschenrechner</title>
   </head>
   <!-- <style>
@@ -12,25 +13,42 @@
     }
   </style> -->
   <body>
+    <div class="calc_btn" id="btn1">1</div>
+    <div class="calc_btn" id="btn2">2</div>
+    <div class="calc_btn" id="btn3">3</div>
+    <div class="calc_btn" id="btn4">4</div>
+    <div class="calc_btn" id="btn5">5</div>
+    <div class="calc_btn" id="btn6">6</div>
+    <div class="calc_btn" id="btn7">7</div>
+    <div class="calc_btn" id="btn8">8</div>
+    <div class="calc_btn" id="btn9">9</div>
+    <div class="calc_btn" id="btn10">0</div>
+    <div class="calc_btn" id="btn11">,</div>
+    <div class="calc_btn" id="btn12">AC</div>
+    <div class="calc_btn" id="btn13">-/+</div>
+    <div class="calc_btn" id="btn14">%</div>
     <input
       type="text"
       name="first"
       placeholder="enter first number"
       value="22"
+      id="first"
     />
-    +
+
     <input
       type="text"
       name="second"
       placeholder="enter second number"
       value="117"
-      id="test"
+      id="second"
     />
     <button class="sum">Add</button>
     <button class="sub">Subtract</button>
     <button class="multi">Multiply</button>
     <button class="div">Divide</button>
-    <div id="result">0</div>
+    <button class="length">Length</button>
+    <div <div id="result">0</div>
+
     <script src="./index.js"></script>
   </body>
 </html>
