add ha solution

--- a/src/index.html
+++ b/src/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+    <link rel="stylesheet" href="style.scss" />
     <title>Texas Taschenrechner</title>
   </head>
   <!-- <style>
@@ -31,6 +32,7 @@
     <button class="multi">Multiply</button>
     <button class="div">Divide</button>
     <div id="result">0</div>
+    <div id="history"></div>
     <script src="./index.js"></script>
   </body>
 </html>
